[gd_scene load_steps=2 format=3 uid="uid://ccbctym3skpil"]

[ext_resource type="Script" path="res://test_window.gd" id="1_02eat"]

[node name="TestWindow" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_02eat")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="VBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="LabelEmpty" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25

[node name="LabelExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Expected Binary Tokens"

[node name="LabelActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Actual Binary Tokens"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="LabelUSize" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Uncompressed byte count    "
horizontal_alignment = 2

[node name="SizeUExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "N KBs"

[node name="SizeUActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="LabelULoad" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Uncompressed loaded    "
horizontal_alignment = 2

[node name="LoadUExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="LoadUActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "-"

[node name="LabelUTime" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Compile time     "
horizontal_alignment = 2

[node name="TimeUExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "-"

[node name="TimeUActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="LabelCSize" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Compressed byte count    "
horizontal_alignment = 2

[node name="SizeCExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "N KBs"

[node name="SizeCActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="LabelCLoad" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Compressed loaded    "
horizontal_alignment = 2

[node name="LoadCExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="LoadCActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "-"

[node name="LabelCTime" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Compile time (compressed)    "
horizontal_alignment = 2

[node name="TimeCExpected" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "-"

[node name="TimeCActual" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="RunExpectedButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Run TestScene with Expected Bytecode"

[node name="RunActualButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Run TestScene with Actual Bytecode"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RunTestButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Run compiler"

[node name="ResultLabel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
disabled = true
text = "Waiting Result"
